erDiagram
    cor {
        int id PK
        varchar nome
    }

    marca {
        int id PK
        varchar nome
    }

    modelo {
        int id PK
        varchar descricao
        int id_marca FK
        ENUM categoria
    }

    motor {
        int id_modelo PK, FK
        ENUM tipo_combustivel
        int potencia
    }

    veiculo {
        int id PK
        varchar placa
        varchar observacoes
        int id_cor FK
        int id_modelo FK
    }

    servico {
        int id PK
        varchar descricao
        double valor
        int pontos
        ENUM categoria
    }

    marca ||--o{ modelo : "possui"
    modelo ||--|| motor : "tem"
    modelo ||--o{ veiculo : "é um"
    cor ||--o{ veiculo : "colorido com"